--- a/Autor.html
+++ b/Autor.html
@@ -14,5 +14,7 @@
             <li>Correo Electrónico: maleja444malori02@gmail.com</li>
             <li>Usuario Skype: live:213b9d31ac5feda2</li>
         </ul>
+        
+        <img src="" alt="AlejandraOrtiz">
 </body>
 </html>
