--- a/Inicio.html
+++ b/Inicio.html
@@ -37,7 +37,7 @@
                         <p>Contenido en HTML (SECTION, ASIDE, FOOTER, ARTICLE)</p>
             </td>
             <td>
-                <img src="logounad.png" alt="logo">
+                <img src="logounad.png" alt="logounad">
             </td>
         </tr>
     </table>
