--- a/Autor.html
+++ b/Autor.html
@@ -15,6 +15,6 @@
             <li>Usuario Skype: live:213b9d31ac5feda2</li>
         </ul>
         
-        <img src="" alt="AlejandraOrtiz">
+        <img src="alejandra.jpeg" alt="AlejandraOrtiz">
 </body>
 </html>
