--- a/Inicio.html
+++ b/Inicio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ovi contenido en html</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="body">
     <H1 class="title">OVI Contenido en Html (Section, Aside, Footer, Article)</H1>
