--- a/Autor.html
+++ b/Autor.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Datos personales</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Datos de Autor</h1>
