--- a/Inicio.html
+++ b/Inicio.html
@@ -38,7 +38,7 @@
                         <p>Contenido en HTML (SECTION, ASIDE, FOOTER, ARTICLE)</p>
             </td>
             <td>
-                <img src="logounad.PNG" alt="logounad">
+                <img src="logounad.PNG" alt="logo">
             </td>
         </tr>
     </table>
