--- a/Autor.html
+++ b/Autor.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Datos de Autor</h1>
+        <img src="logounad.PNG" alt="logounad">
         <ul>
             <li>Nombre: Maira Alejandra Ortiz Ibáñez</li>
             <li>Código: 1005042866</li>
