--- a/Autor.html
+++ b/Autor.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <H1 class="title">OVI Contenido en Html (Section, Aside, Footer, Article)</H1>
+
+    <div class="menu">
+        <a href="Inicio.html">Inicio</a>-
+        <a href="Conceptos01.html">Conceptos</a>-
+        <a href="Recurso01.html">Recursos</a>-
+        <a href="Autoevaluacion01.html">Autoevaluacion</a>-
+        <a href="Autor.html">Autor</a>-
+    </div>
+    
     <h1>Datos de Autor</h1>
         
         <ul>
