--- a/Inicio.html
+++ b/Inicio.html
@@ -11,13 +11,13 @@
 
     <div class="menu">
         <a href="Inicio.html">Inicio</a>-
-        <a href="Conceptos1.html">Conceptos</a>-
-        <a href="Recurso1.html">Recursos</a>-
+        <a href="Conceptos2.html">Conceptos</a>-
+        <a href="Recurso2.html">Recursos</a>-
         <a href="Autoevaluacion1.html">Autoevaluacion</a>-
         <a href="Autor.html">Autor</a>-
     </div>
 
-    <h2>Inicio</h2>
+    <h2 class="title">Inicio</h2>
 
     <table class="tabla">
         <tr>
