--- a/Inicio.html
+++ b/Inicio.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="body">
-    <img src="logounad.PNG" alt="logo">
+    <img src="logounad.PNG" alt="logo"> <H1 class="title">OVI Contenido en Html (Section, Aside, Footer, Article)</H1>
     
     <div class="menu">
         <a href="Inicio.html">Inicio</a>-
@@ -16,8 +16,6 @@
         <a href="Autoevaluacion1.html">Autoevaluacion</a>-
         <a href="Autor.html">Autor</a>-
     </div>
-
-    <H1 class="title">OVI Contenido en Html (Section, Aside, Footer, Article)</H1>
 
     <h2 class="title">Inicio</h2>
 
