--- a/Inicio.html
+++ b/Inicio.html
@@ -6,9 +6,20 @@
     <title>Ovi contenido en html</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body class="body">
-    <img src="logounad.PNG" alt="logo"> <H1 class="title">OVI Contenido en Html (Section, Aside, Footer, Article)</H1>
     
+    <table>
+        <tr>
+            <td>
+                <img src="logounad.PNG" alt="logo">
+            </td>
+            <td>
+                <H1 class="title">OVI Contenido en Html (Section, Aside, Footer, Article)</H1>
+            </td>
+        </tr>
+    </table>
+     
     <div class="menu">
         <a href="Inicio.html">Inicio</a>-
         <a href="Conceptos2.html">Conceptos</a>-
