--- a/Inicio.html
+++ b/Inicio.html
@@ -15,7 +15,7 @@
                 <img src="logounad.PNG" alt="logo">
             </td>
             <td>
-                <H1 class="">OVI Contenido en Html (Section, Aside, Footer, Article)</H1>
+                <H1 class="titledos">OVI Contenido en Html (Section, Aside, Footer, Article)</H1>
             </td>
         </tr>
     </table>
