--- a/Inicio.html
+++ b/Inicio.html
@@ -21,7 +21,7 @@
     </table>
      
     <div class="menu">
-        <a href="Inicio.html">Inicio</a>-
+        <a href="Inicio.html"><Color="FFFFFF">Inicio</a>-
         <a href="Conceptos2.html">Conceptos</a>-
         <a href="Recurso2.html">Recursos</a>-
         <a href="Autoevaluacion1.html">Autoevaluacion</a>-
