--- a/Autor.html
+++ b/Autor.html
@@ -18,7 +18,7 @@
     </div>
 
     <h1>Datos de Autor</h1>
-        <div>
+        <div class="menu2">
             <ul>
                 <li>Nombre: Maira Alejandra Ortiz Ibáñez</li>
                 <li>Código: 1005042866</li>
