--- a/Autor.html
+++ b/Autor.html
@@ -29,7 +29,7 @@
         </ul>
     </div>
          
-    <img src="alejandra.jpeg" alt="AlejandraOrtiz" width="100" height="50">
-    
+    <img src="alejandra.jpeg" alt="AlejandraOrtiz">
+
 </body>
 </html>
